--- a/package.json
+++ b/package.json
@@ -1,11 +1,26 @@
 {
   "name": "javascript-dot-antlr-parser",
   "version": "1.0.0",
-  "description": "ANTLR parser in JavaScript for DOT language",
+  "description": "ANTLR parser written in Javascript for the DOT language",
   "main": "index.js",
-  "author": "codingkapoor",
-  "license": "MIT",
   "dependencies": {
     "antlr4": "4.7.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/codingkapoor/javascript-dot-antlr-parser.git"
+  },
+  "keywords": [
+    "antlr4",
+    "javascript",
+    "dot",
+    "diagnostics",
+    "parser"
+  ],
+  "author": "codingkapoor",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/codingkapoor/javascript-dot-antlr-parser/issues"
+  },
+  "homepage": "https://github.com/codingkapoor/javascript-dot-antlr-parser#readme"
 }
