--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "javascript-dot-antlr-parser",
-  "version": "1.0.22",
-  "description": "The objective of this project is to demostrate how to capture diagnostics i.e., semantic and syntactic errors for DOT language using ANTLR parser written in Javascript.",
+  "name": "js-dot-antlr-parser",
+  "version": "1.0.0",
+  "description": "The objective of this project is to demonstrate how to capture diagnostics i.e., semantic and syntactic errors for DOT language using ANTLR parser written in Javascript.",
   "main": "index.js",
   "dependencies": {
     "antlr4": "4.7.1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/codingkapoor/javascript-dot-antlr-parser.git"
+    "url": "git+https://github.com/codingkapoor/js-dot-antlr-parser.git"
   },
   "keywords": [
     "antlr4",
@@ -20,7 +20,7 @@
   "author": "codingkapoor",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/codingkapoor/javascript-dot-antlr-parser/issues"
+    "url": "https://github.com/codingkapoor/js-dot-antlr-parser/issues"
   },
-  "homepage": "https://github.com/codingkapoor/javascript-dot-antlr-parser#readme"
+  "homepage": "https://github.com/codingkapoor/js-dot-antlr-parser#readme"
 }
